# cpp20_refresh

./: .gitignore  CMakeLists.txt  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml
cpp20_concepts/lib/: CMakeLists.txt
cpp20_concepts/lib/include/: hashable.h
cpp20_concepts/test/: CMakeLists.txt  tests.cpp
cpp20_modules/lib/: CMakeLists.txt  a.cpp  a_math.cxx  a_math_impl.cxx  math.cpp
cpp20_modules/test/: CMakeLists.txt  math.cpp  strings.cpp  strings.cxx  tests.cpp
